--- a/ML_NIDS.ipynb
+++ b/ML_NIDS.ipynb
@@ -20,6 +20,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a43ccef6",
+   "metadata": {},
+   "source": [
+    "The files necessary for download can be found at: https://www.kaggle.com/datasets/cicdataset/cicids2017"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "89441553",
    "metadata": {},
    "source": [
@@ -134,7 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Function Call for aggregating files\n",
     "PCAP_DF = pcap_or_csv_to_pandas(PCAP_OR_CSV,file_path)\n",
+    "#Function call for removing rows with NaN or infinite values\n",
     "PCAP_DF_Cleaned = clean_dataset(PCAP_DF)"
    ]
   },
@@ -145,63 +155,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creat a copy of dataset to ensure integirty of original dataset is kept\n",
     "PCAP_DF_Simplifed = PCAP_DF_Cleaned.copy()\n",
-    "PCAP_DF_Simplifed = PCAP_DF_Simplifed.fillna(0)\n",
+    "#Simplifying dataset to either indicate a row item is benign or malicious\n",
     "PCAP_DF_Simplifed['BENIGN/ATTACK'] = np.where(PCAP_DF_Simplifed['Label'] != 'BENIGN', 'ATTACK', 'BENIGN')\n",
+    "#dropping Label column from dataset since BENIGN/ATTACK column was created\n",
     "PCAP_DF_Simplifed = PCAP_DF_Simplifed.drop(columns = ['Label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "bb5728c8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9988896275655261"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#input dataset for training by dropping 'BENIGN/ATTACK'\n",
     "#X = PCAP_DF_Simplifed.drop(columns = ['BENIGN/ATTACK'])\n",
+    "\n",
+    "#Values/output from dataset is 'BENIGN/ATTACK'\n",
     "#y = PCAP_DF_Simplifed['BENIGN/ATTACK']\n",
+    "\n",
+    "#splitting datset into 2, 80% is to train the model and 20% is to test the predictions of the model\n",
     "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)\n",
     "\n",
+    "#Using a decision tree machine learning model and fitting it using the X and y training sets\n",
     "#model = DecisionTreeClassifier()\n",
     "#model.fit(X_train,y_train)\n",
-    "#predictions = model.predict(X_test)\n",
     "\n",
+    "#Testing the predictions of the model\n",
+    "#predictions = model.predict(X_test)\n",
     "#score = accuracy_score(y_test, predictions)\n",
     "#score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "774ff57a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['CYBER-ATTACK_PREDICTIONS.joblib']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#After training the model I export the it so I don't have to continually train it and can just load it to make predictions\n",
     "#joblib.dump(model, 'CYBER-ATTACK_PREDICTIONS.joblib')\n",
-    "model = joblib.load('CYBER-ATTACK_PREDICTIONS.joblib')"
+    "\n",
+    "#This loads the exported model above, I can continue to aggregate datasets and make predictions based on the trained model \n",
+    "#as long as all columns of dataset loaded are the same \n",
+    "#model = joblib.load('CYBER-ATTACK_PREDICTIONS.joblib')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25615b74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
