--- a/ML_NIDS.ipynb
+++ b/ML_NIDS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "0129af79",
    "metadata": {},
    "outputs": [],
@@ -36,18 +36,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "561408f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter the folder path: ML_DATA\n"
+     ]
+    }
+   ],
    "source": [
     "#Enter whether file formats for aggregation are PCAP or CSV\n",
     "PCAP_OR_CSV = 'CSV'\n",
     "#Give absolute file path where all file(s) are stored\n",
-    "file_path = r'C:\\Users\\17272\\Desktop\\ML_Datasets'\n",
+    "file_path = get_absolute_path()\n",
     "#if your file has a name you'd like to refrence in the data set and know where it can be parsed from the in file path, \n",
     "#give the position of the file name\n",
     "split_file_name = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "695edbc1",
+   "metadata": {},
+   "source": [
+    "## Function for providing absolute file path to folder where files are stored"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "41dfad34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_absolute_path():\n",
+    "    # Prompt the user to enter the folder path\n",
+    "    folder_path = input(\"Please enter the folder path: \")\n",
+    "\n",
+    "    # Check if the path exists and is a directory\n",
+    "    if os.path.exists(folder_path) and os.path.isdir(folder_path):\n",
+    "        # Convert the folder path to an absolute path\n",
+    "        absolute_path = os.path.abspath(folder_path)\n",
+    "        print(absolute_path)\n",
+    "        return absolute_path\n",
+    "    else:\n",
+    "        # Return an error message if the path is invalid or does not exist\n",
+    "        print(\"Error: The specified path does not exist or is not a directory.\")"
    ]
   },
   {
@@ -171,22 +209,22 @@
    "outputs": [],
    "source": [
     "#input dataset for training by dropping 'BENIGN/ATTACK'\n",
-    "#X = PCAP_DF_Simplifed.drop(columns = ['BENIGN/ATTACK'])\n",
+    "X = PCAP_DF_Simplifed.drop(columns = ['BENIGN/ATTACK'])\n",
     "\n",
     "#Values/output from dataset is 'BENIGN/ATTACK'\n",
-    "#y = PCAP_DF_Simplifed['BENIGN/ATTACK']\n",
+    "y = PCAP_DF_Simplifed['BENIGN/ATTACK']\n",
     "\n",
     "#splitting datset into 2, 80% is to train the model and 20% is to test the predictions of the model\n",
-    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)\n",
     "\n",
     "#Using a decision tree machine learning model and fitting it using the X and y training sets\n",
-    "#model = DecisionTreeClassifier()\n",
-    "#model.fit(X_train,y_train)\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X_train,y_train)\n",
     "\n",
     "#Testing the predictions of the model\n",
-    "#predictions = model.predict(X_test)\n",
-    "#score = accuracy_score(y_test, predictions)\n",
-    "#score"
+    "predictions = model.predict(X_test)\n",
+    "score = accuracy_score(y_test, predictions)\n",
+    "score"
    ]
   },
   {
@@ -197,7 +235,7 @@
    "outputs": [],
    "source": [
     "#After training the model I export the it so I don't have to continually train it and can just load it to make predictions\n",
-    "#joblib.dump(model, 'CYBER-ATTACK_PREDICTIONS.joblib')\n",
+    "joblib.dump(model, 'CYBER-ATTACK_PREDICTIONS.joblib')\n",
     "\n",
     "#This loads the exported model above, I can continue to aggregate datasets and make predictions based on the trained model \n",
     "#as long as all columns of dataset loaded are the same \n",
